[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/interface/menu/VolumeSelector.gd" type="Script" id=1]
[ext_resource path="res://graphics/images/interface/arrow-left.png" type="Texture" id=2]
[ext_resource path="res://graphics/images/interface/arrow-right.png" type="Texture" id=3]

[node name="VolumeSelector" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 20 )
focus_mode = 2
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer"]
margin_left = 243.0
margin_top = 172.0
margin_right = 397.0
margin_bottom = 188.0

[node name="Title" type="Label" parent="CenterContainer/HBoxContainer"]
margin_top = 1.0
margin_right = 80.0
margin_bottom = 15.0
rect_min_size = Vector2( 80, 0 )
text = "Music:"

[node name="LeftButton" type="TextureButton" parent="CenterContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 100.0
margin_bottom = 16.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 2 )

[node name="Volume" type="Label" parent="CenterContainer/HBoxContainer"]
margin_left = 104.0
margin_top = 1.0
margin_right = 134.0
margin_bottom = 15.0
rect_min_size = Vector2( 30, 0 )
text = "10"
align = 1

[node name="RightButton" type="TextureButton" parent="CenterContainer/HBoxContainer"]
margin_left = 138.0
margin_right = 154.0
margin_bottom = 16.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 3 )
[connection signal="focus_entered" from="." to="." method="_on_VolumeSelector_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_VolumeSelector_focus_exited"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="CenterContainer/HBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
